--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -77,5 +77,5 @@
     <color name="mode_icon_hover_highlight">#2DFFFFFF</color>
 
     <color name="blue_button_text_color">#00838F</color>
-    <color name="ic_launcher_camera_background">#EEEEEE</color>
+    <color name="ic_launcher_camera_background">#333333</color>
 </resources>
